# osdu-mcp-server

./: .gitignore  AI_EVOLUTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  case-study.md  config.example.yaml  mypy.ini  pyproject.toml  release-please-config.json  setup.cfg
.claude/commands/: k8s-analysis.md
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/ISSUE_TEMPLATE/: copilot-task.md
.github/workflows/: ci.yml  copilot-assign.yml  copilot-in-progress.yml  copilot-setup-steps.yml  release.yml
ai-docs/: entitlements-admin.http  entitlements.http  legal.http  legal.yaml  partition.http  partition.yaml  schema.md  storage.http  storage.md  storage.yaml
cli-docs/: cli_prd.md  cli_spec.md  osdu-cli.xml
docs/: label-strategy.md  project-architect.md
docs/adr/: 006-project-structure-and-packaging.md  011-oauth-scope-simplification.md  README.md
logs/: status_line.json
specs/: entitlements-service-minimal-spec.md  entitlements-service-spec.md  foundation-prompts-spec.md  foundation-spec.md  legal-service-spec.md  multi-cloud-auth-spec.md  partition-service-spec.md  phase2_techdebt_refactor.md  record-lifecycle-workflow-prompt-spec.md  schema-service-spec.md  search-service-spec.md  storage-service-spec.md
src/osdu_mcp_server/: __init__.py  main.py  server.py
src/osdu_mcp_server/prompts/: __init__.py  guide_record_lifecycle.py
src/osdu_mcp_server/resources/: __init__.py
src/osdu_mcp_server/resources/templates/: legal-tag-template.json
src/osdu_mcp_server/shared/: assets_generator.py  auth_handler.py  config_manager.py  exceptions.py  logging_manager.py  osdu_client.py  service_urls.py  utils.py
src/osdu_mcp_server/shared/clients/: __init__.py  entitlements_client.py  legal_client.py  partition_client.py  schema_client.py  storage_client.py
src/osdu_mcp_server/tools/: health_check.py
src/osdu_mcp_server/tools/entitlements/: __init__.py  mine.py
src/osdu_mcp_server/tools/legal/: __init__.py  batch_retrieve.py  create.py  delete.py  get.py  get_properties.py  list.py  search.py  update.py
src/osdu_mcp_server/tools/partition/: __init__.py  create.py  delete.py  get.py  list.py  update.py
src/osdu_mcp_server/tools/schema/: __init__.py  create.py  get.py  list.py  search.py  update.py
src/osdu_mcp_server/tools/search/: query.py  search_by_id.py  search_by_kind.py
src/osdu_mcp_server/tools/storage/: __init__.py  create_update_records.py  delete_record.py  fetch_records.py  get_record.py  get_record_version.py  list_record_versions.py  purge_record.py  query_records_by_kind.py
tests/: test_health_check.py  test_server.py  test_server_prompts.py
tests/prompts/: test_guide_record_lifecycle.py  test_guide_search_patterns.py
tests/resources/: test_workflow_resources.py
tests/shared/: test_assets_generator.py  test_auth.py  test_auth_multicloud.py  test_config.py  test_exceptions.py  test_logging.py  test_osdu_client.py  test_utils.py
tests/tools/entitlements/: __init__.py  test_mine.py
tests/tools/legal/: __init__.py  test_list.py  test_write_protection.py
tests/tools/partition/: __init__.py  test_get.py  test_list.py  test_write_protection.py
tests/tools/schema/: __init__.py  test_get.py  test_list.py  test_search.py  test_write_protection.py
tests/tools/search/: __init__.py  test_search_behavior.py
tests/tools/storage/: __init__.py  test_get_record.py  test_write_protection.py
